2002-07-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily, flower: Ran buildscripts/ontgaar.py.  See also
	http://lilypond.org/wiki/?CodingStandards.
	
	* Documentation/GNUmakefile: Remove regression-test stuff.
	(deep-WWW-clean): Remove wiki-dump.  Fixes web-clean target.

	* Documentation/regression-test.tely: Remove.

	* Documentation/user/refman.itely (Text scripts): Comment out ref
	to PostScript output.

	* lily/beam.cc (knee_b): Fix to also work if some dirs are not
	set.

	* lily/beam.cc (set_stem_directions): For knees, set stems to
	their natural direction.

2002-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stem.cc (calc_stem_info): Don't force stems of kneed beams
	to reach middle staff line.

	* lily/beam.cc (consider_auto_knees): Recalculate beam position
	after deciding for a knee.

2002-07-26  Han-Wen  <hanwen@cs.uu.nl>

	* Documentation/user/internals.itely: move output-formats doco to
	WikiWiki.
	
2002-07-25  Han-Wen  <hanwen@cs.uu.nl>
	
	* po/fr.po: update from TP

	* input/template/GNUmakefile (TITLE): add lysdoc target for the
	templates

	* Documentation/user/introduction.itely (Introduction): finish
	introduction 

2002-07-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/music-iterator.hh (class Music_iterator): change
	get_music() to get_pending_events().

2002-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/ontgaar.py: get_music () -> get_pending_events ().
	
	* buildscripts/ontgaar.py: New file.

	* scm/grob-property-description.scm (conditional-elements): Add
	extent-X.

	* lily/grob.cc: Add extent-X and extent-Y to interface.

	* lily/grob-scheme.cc (ly_get_parent): Don't dereference null
	parent. (Han-Wen)

	* input/test/move-accidentals.ly: New file. (Han-Wen)

2002-07-25  Han-Wen  <hanwen@cs.uu.nl>

	* lily/grob-scheme.cc (ly_get_parent): don't crash if no parent.

	* lily/slur.cc (get_first_notecolumn_y): robustness: don't crash
	if no note-columns.

	* server.el.patch: new file.
