@@ -1,5 +1,8 @@
 2002-07-26  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/grob-scheme.cc (get_original, get_system, get_broken_into):
+	Move scheme funcs from grob.cc and spanner.cc.
+
 	* lily, flower: Ran buildscripts/ontgaar.py.  See also
 	http://lilypond.org/wiki/?CodingStandards.
 	
